--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ROCK PAPER SCISSOR</title>
-  <link rel="stylesheet" href="styles/6rockPaperScissor.css">
+  <link rel="stylesheet" href="./6rockPaperScissor.css">
 </head>
 <body>
  <p class="title">Rock Paper Scissor</p>
   <button onclick="
     playGame(`Rock`);
-  "><img src="images/rock.png" class="move-icon"></button>
+  "><img src="./rock.png" class="move-icon"></button>
 
   <button 
   onclick="
      playGame(`Paper`);
-  "><img src="images/paper.png" class="move-icon"></button>
+  "><img src="./paper.png" class="move-icon"></button>
 
   <button onclick=" 
    playGame(`Scissor`);
-  "><img src="images/scissor.png" class="move-icon"></button>
+  "><img src="./scissor.png" class="move-icon"></button>
 
 
   <p class="js-result"></p>
@@ -40,7 +40,8 @@
     autoplay();
     ">Auto Play</button>
 
-    <script src="scripts/6rockPaperScissor.js"></script>
+    <script src="./6rockPaperScissor.js"></script>
     
 </body>
 </html>
+
